Add make clean switch to the gtk version.

--- a/gtk_browser/Makefile
+++ b/gtk_browser/Makefile
@@ -7,3 +7,7 @@ all: minibrowser
 minibrowser:
 	$(CC) -o minibrowser minibrowser.c $(INCLUDES) $(FLAGS)
 
+clean: minibrowser
+	rm minibrowser
+	rm *~
+
